--- a/about-cn.html
+++ b/about-cn.html
@@ -1,206 +1,221 @@
-	<!DOCTYPE html>
-	<html lang="zxx" class="no-js">
-	<head>
-		<!-- Mobile Specific Meta -->
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<!-- Favicon-->
-		<link rel="shortcut icon" href="img/fav.png">
-		<!-- Author Meta -->
-		<meta name="author" content="colorlib">
-		<!-- Meta Description -->
-		<meta name="description" content="">
-		<!-- Meta Keyword -->
-		<meta name="keywords" content="">
-		<!-- meta character set -->
-		<meta charset="UTF-8">
-		<!-- Site Title -->
-		<title>Jennifer Wu</title>
+<!DOCTYPE html>
+<html lang="zxx" class="no-js">
 
-		<link href="https://fonts.googleapis.com/css?family=PT+Sans|Poppins:100,200,400,300,500,600,700" rel="stylesheet">
-			<!--
+<head>
+	<!-- Mobile Specific Meta -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<!-- Favicon-->
+	<link rel="shortcut icon" href="img/fav.png">
+	<!-- Author Meta -->
+	<meta name="author" content="colorlib">
+	<!-- Meta Description -->
+	<meta name="description" content="">
+	<!-- Meta Keyword -->
+	<meta name="keywords" content="">
+	<!-- meta character set -->
+	<meta charset="UTF-8">
+	<!-- Site Title -->
+	<title>Jennifer Wu</title>
+
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans|Poppins:100,200,400,300,500,600,700" rel="stylesheet">
+	<!--
 			CSS
 			============================================= -->
-			<link rel="stylesheet" href="css/linearicons.css">
-			<link rel="stylesheet" href="css/font-awesome.min.css">
-			<link rel="stylesheet" href="css/bootstrap.css">
-			<link rel="stylesheet" href="css/magnific-popup.css">
-			<link rel="stylesheet" href="css/jquery-ui.css">
-			<link rel="stylesheet" href="css/nice-select.css">
-			<link rel="stylesheet" href="css/animate.min.css">
-			<link rel="stylesheet" href="css/owl.carousel.css">
-			<link rel="stylesheet" href="css/main.css">
-		</head>
-		<body>
-		  <header id="header">
-		    <div class="container main-menu">
-		    	<div class="row align-items-center justify-content-between d-flex">
-						<div id="logo">
-			        <a href="index-cn.html" class="navbar-title">Jennifer Wu</a>
-			      </div>
-			      <nav id="nav-menu-container">
-			        <ul class="nav-menu">
-			          <li><a href="about-cn.html">关于</a></li>
-			          <li><a href="https://medium.com/@jenniwu94" target="_blank">文章</a></li>
-								<li><a href="index.html">English</a></li>
-			        </ul>
-			      </nav>
-		    	</div>
-		    </div>
-		  </header>
+	<link rel="stylesheet" href="css/linearicons.css">
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/magnific-popup.css">
+	<link rel="stylesheet" href="css/jquery-ui.css">
+	<link rel="stylesheet" href="css/nice-select.css">
+	<link rel="stylesheet" href="css/animate.min.css">
+	<link rel="stylesheet" href="css/owl.carousel.css">
+	<link rel="stylesheet" href="css/main.css">
+</head>
 
-			<!-- Start home-about Area -->
-			<section class="home-about-area section-gap">
-				<div class="container">
-					<div class="row align-items-center justify-content-between">
-						<div class="col-lg-5 col-md-6 home-about-left">
-							<img class="img-fluid" src="img/image.png" alt="">
-						</div>
-						<div class="col-lg-7 col-md-6 home-about-right">
-							<h6 class="text-uppercase">关于我</h6>
-							<h1 class="text-uppercase">你好! 👋</h1>
-							<p>
-								我是 Jennifer，一名热爱通过创造有意义、战略性和鼓舞他人的方案来解决困难商业问题的多学科产品工程师。我对新科技充满好奇心，并且喜欢开发有积极社会影响的产品。
-							</p>
-							<p>
-								我目前在亚马逊 AWS 担任软件工程实的职位，为企业用户提供消费分析。在这之前，我从事财务服务工作，帮助客户应对他们的法律合规要求。
-							</p>
+<body>
+	<header id="header">
+		<div class="container main-menu">
+			<div class="row align-items-center justify-content-between d-flex">
+				<div id="logo">
+					<a href="index-cn.html" class="navbar-title">Jennifer Wu</a>
+				</div>
+				<nav id="nav-menu-container">
+					<ul class="nav-menu">
+						<li><a href="about-cn.html">关于</a></li>
+						<li><a href="https://medium.com/@jenniwu94" target="_blank">文章</a></li>
+						<li><a href="index.html">English</a></li>
+					</ul>
+				</nav>
+			</div>
+		</div>
+	</header>
+
+	<!-- Start home-about Area -->
+	<section class="home-about-area section-gap">
+		<div class="container">
+			<div class="row align-items-center justify-content-between">
+				<div class="col-lg-5 col-md-6 home-about-left">
+					<img class="img-fluid" src="img/image.png" alt="">
+				</div>
+				<div class="col-lg-7 col-md-6 home-about-right">
+					<h6 class="text-uppercase">关于我</h6>
+					<h1 class="text-uppercase">你好! 👋</h1>
+					<p>
+						我是 Jennifer，一名热爱通过创造有意义、战略性和鼓舞他人的方案来解决困难商业问题的多学科产品工程师。我对新科技充满好奇心，并且喜欢开发有积极社会影响的产品。
+					</p>
+					<p>
+						我目前在派拓网络担任客户成功工程师，为企业提供系统安全设计与自动化。 在这之前，我在亚马逊云服务平台 AWS 担任软件工程师，为企业用户提供消费分析。我也曾经从事于财会行业，帮助客户应对他们的法律合规要求。
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- End home-about Area -->
+
+	<!-- Start timeline Area -->
+	<section class="timeline mt-60 pb-120">
+		<div class="text-center">
+			<div class="menu-content">
+				<div class="title text-center">
+					<h1 class="mb-10">我的资历</h1>
+					<p>科技连接商业</p>
+				</div>
+			</div>
+		</div>
+		<ul>
+			<li>
+				<div class="content">
+					<img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/panw-logo.png" alt="">
+					<h4>
+						<time>客户成功工程师</time>
+					</h4>
+					<p>2021-现在</p>
+				</div>
+			</li>
+			<li>
+				<div class="content">
+					<img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/aws-logo.png" alt="">
+					<h4>
+						<time>软件开发工程师</time>
+					</h4>
+					<p>2018-2021</p>
+				</div>
+			</li>
+			<li>
+				<div class="content">
+					<img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/ubc-logo.png" alt="">
+					<h4>
+						<time>计算机科学学士</time>
+					</h4>
+					<p><b>英属哥伦比亚大学</b></p>
+					<p>2016-2019</p>
+					<p><b>GPA:</b> A, 4.0/4.0</p>
+				</div>
+			</li>
+			<li>
+				<div class="content">
+					<img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/visier-logo.png" alt="">
+					<h4>
+						<time>软件工程师</time>
+					</h4>
+					<p>2018</p>
+				</div>
+			</li>
+			<li>
+				<div class="content">
+					<img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/sauder-logo.png" alt="">
+					<h4>
+						<time>商科学士，会计专业，荣誉毕业生</time>
+					</h4>
+					<p><b>尚德商学院，英属哥伦比亚大学</b></p>
+					<p>2011-2016</p>
+					<p><b>GPA:</b> A-, 3.7/4.0</p>
+				</div>
+			</li>
+			<li>
+				<div class="content">
+					<img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/adidas-logo.png" alt="">
+					<h4>
+						<time>业务分析师</time>
+					</h4>
+					<p>2014-2015</p>
+				</div>
+			</li>
+			<li>
+				<div class="content">
+					<img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/pwc-logo.png" alt="">
+					<h4>
+						<time>初级审计人员，初级税务人员</time>
+					</h4>
+					<p>2014</p>
+				</div>
+			</li>
+			<li>
+				<div class="content">
+					<img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/activestate-logo.png"
+						alt="">
+					<h4>
+						<time>会计专员</time>
+					</h4>
+					<p>2013-2014</p>
+				</div>
+			</li>
+		</ul>
+	</section>
+
+	<!-- start footer Area -->
+	<footer class="footer-area section-gap">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-5 col-md-6 col-sm-6">
+					<div class="single-footer-widget">
+						<h4>Jennifer是谁？</h4>
+						<p>
+							商业策划师、软件工程师、多学科产品工程师。热爱通过创造有意义、战略性和鼓舞他人的方案来解决困难商业问题。对新科技充满好奇心，并且喜欢开发有积极社会影响的产品。
+						</p>
+						<p class="footer-text">
+							Copyright &copy;
+							<script>document.write(new Date().getFullYear());</script>, All rights reserved
+						</p>
+					</div>
+				</div>
+				<div class="col-lg-7 col-md-6 col-sm-6 social-widget">
+					<div class="single-footer-widget">
+						<h4>Social</h4>
+						<div class="footer-social d-flex align-items-center">
+							<a href="https://www.linkedin.com/in/jensywu/" target="_blank"><i
+									class="fa fa-linkedin-square"></i></a>
+							<a href="https://twitter.com/tweetjenniwu" target="_blank"><i class="fa fa-twitter"></i></a>
+							<a href="https://github.com/jenniwu" target="_blank"><i class="fa fa-github"></i></a>
+							<a href="https://medium.com/@jenniwu94" target="_blank"><i class="fa fa-medium"></i></a>
 						</div>
 					</div>
 				</div>
-			</section>
-			<!-- End home-about Area -->
+			</div>
+		</div>
+	</footer>
+	<!-- End footer Area -->
 
-			<!-- Start timeline Area -->
-			<section class="timeline mt-60 pb-120">
-            <div class="text-center">
-                <div class="menu-content">
-                    <div class="title text-center">
-                        <h1 class="mb-10">我的资历</h1>
-                        <p>科技连接商业</p>
-                    </div>
-                </div>
-            </div>
-			  <ul>
-				<li>
-					<div class="content">
-							  <img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/aws-logo.png" alt="">
-					  <h4>
-						<time>软件开发工程师</time>
-					  </h4>
-					  <p>2018-现在</p>
-					</div>
-				  </li>
-			    <li>
-			      <div class="content">
-							<img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/ubc-logo.png" alt="">
-			        <h4>
-			          <time>计算机科学学士</time>
-			        </h4>
-							<p><b>英属哥伦比亚大学</b></p>
-			        <p>2016-2019</p>
-			        <p><b>GPA:</b> A, 4.0/4.0</p>
-			      </div>
-			    </li>
-			    <li>
-			      <div class="content">
-			      	<img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/visier-logo.png" alt="">
-			        <h4>
-			          <time>软件工程师</time>
-			        </h4>
-			        <p>2018</p>
-			      </div>
-			    </li>
-			    <li>
-			      <div class="content">
-			      	<img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/sauder-logo.png" alt="">
-			        <h4>
-			          <time>商科学士，会计专业，荣誉毕业生</time>
-			        </h4>
-							<p><b>尚德商学院，英属哥伦比亚大学</b></p>
-			        <p>2011-2016</p>
-			        <p><b>GPA:</b> A-, 3.7/4.0</p>
-			      </div>
-			    </li>
-					<li>
-			      <div class="content">
-			      	<img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/adidas-logo.png" alt="">
-			        <h4>
-			          <time>业务分析师</time>
-			        </h4>
-			        <p>2014-2015</p>
-			      </div>
-			    </li>
-					<li>
-			      <div class="content">
-			      	<img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/pwc-logo.png" alt="">
-			        <h4>
-			          <time>初级审计人员，初级税务人员</time>
-			        </h4>
-			        <p>2014</p>
-			      </div>
-			    </li>
-					<li>
-			      <div class="content">
-			      	<img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/activestate-logo.png" alt="">
-			        <h4>
-			          <time>会计专员</time>
-			        </h4>
-			        <p>2013-2014</p>
-			      </div>
-			    </li>
-			  </ul>
-			</section>
-
-            <!-- start footer Area -->
-						<footer class="footer-area section-gap">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-5 col-md-6 col-sm-6">
-                            <div class="single-footer-widget">
-                                <h4>Jennifer是谁？</h4>
-                                <p>
-																	商业策划师、软件工程师、多学科产品工程师。热爱通过创造有意义、战略性和鼓舞他人的方案来解决困难商业问题。对新科技充满好奇心，并且喜欢开发有积极社会影响的产品。
-                                </p>
-                                <p class="footer-text">
-																	Copyright &copy;<script>document.write(new Date().getFullYear());</script>, All rights reserved
-																</p>
-                            </div>
-                        </div>
-                        <div class="col-lg-7 col-md-6 col-sm-6 social-widget">
-                            <div class="single-footer-widget">
-                                <h4>Social</h4>
-                                <div class="footer-social d-flex align-items-center">
-                                    <a href="https://www.linkedin.com/in/jensywu/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
-                                    <a href="https://twitter.com/tweetjenniwu" target="_blank"><i class="fa fa-twitter"></i></a>
-                                    <a href="https://github.com/jenniwu" target="_blank"><i class="fa fa-github"></i></a>
-                                    <a href="https://medium.com/@jenniwu94" target="_blank"><i class="fa fa-medium"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </footer>
-            <!-- End footer Area -->
-
-			<script src="js/vendor/jquery-2.2.4.min.js"></script>
-			<script src="js/popper.min.js"></script>
-			<script src="js/vendor/bootstrap.min.js"></script>
-			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
-  			<script src="js/easing.min.js"></script>
-			<script src="js/hoverIntent.js"></script>
-			<script src="js/superfish.min.js"></script>
-			<script src="js/jquery.ajaxchimp.min.js"></script>
-			<script src="js/jquery.magnific-popup.min.js"></script>
-    		<script src="js/jquery.tabs.min.js"></script>
-			<script src="js/jquery.nice-select.min.js"></script>
-            <script src="js/isotope.pkgd.min.js"></script>
-			<script src="js/waypoints.min.js"></script>
-			<script src="js/jquery.counterup.min.js"></script>
-			<script src="js/simple-skillbar.js"></script>
-			<script src="js/owl.carousel.min.js"></script>
-			<script src="js/mail-script.js"></script>
-			<script src="js/main.js"></script>
+	<script src="js/vendor/jquery-2.2.4.min.js"></script>
+	<script src="js/popper.min.js"></script>
+	<script src="js/vendor/bootstrap.min.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
+	<script src="js/easing.min.js"></script>
+	<script src="js/hoverIntent.js"></script>
+	<script src="js/superfish.min.js"></script>
+	<script src="js/jquery.ajaxchimp.min.js"></script>
+	<script src="js/jquery.magnific-popup.min.js"></script>
+	<script src="js/jquery.tabs.min.js"></script>
+	<script src="js/jquery.nice-select.min.js"></script>
+	<script src="js/isotope.pkgd.min.js"></script>
+	<script src="js/waypoints.min.js"></script>
+	<script src="js/jquery.counterup.min.js"></script>
+	<script src="js/simple-skillbar.js"></script>
+	<script src="js/owl.carousel.min.js"></script>
+	<script src="js/mail-script.js"></script>
+	<script src="js/main.js"></script>
 
 
-		</body>
-	</html>
+</body>
+
+</html>
