--- a/index-cn.html
+++ b/index-cn.html
@@ -1,304 +1,175 @@
 <!DOCTYPE html>
-	<html lang="eng" class="no-js">
-	<head>
-		<!-- Mobile Specific Meta -->
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<!-- Favicon-->
-		<link rel="shortcut icon" href="img/fav.png">
-		<!-- Author Meta -->
-		<meta name="author" content="colorlib">
-		<!-- Meta Description -->
-		<meta name="description" content="">
-		<!-- Meta Keyword -->
-		<meta name="keywords" content="">
-		<!-- meta character set -->
-		<meta charset="UTF-8">
-		<!-- Site Title -->
-		<title>Jennifer Wu</title>
+<html lang="eng" class="no-js">
 
-		<link href="https://fonts.googleapis.com/css?family=PT+Sans|Poppins:100,200,400,300,500,600,700" rel="stylesheet">
-			<!--
+<head>
+	<!-- Mobile Specific Meta -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<!-- Favicon-->
+	<link rel="shortcut icon" href="img/fav.png">
+	<!-- Author Meta -->
+	<meta name="author" content="colorlib">
+	<!-- Meta Description -->
+	<meta name="description" content="">
+	<!-- Meta Keyword -->
+	<meta name="keywords" content="">
+	<!-- meta character set -->
+	<meta charset="UTF-8">
+	<!-- Site Title -->
+	<title>Jennifer Wu</title>
+
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans|Poppins:100,200,400,300,500,600,700" rel="stylesheet">
+	<!--
 			CSS
 			============================================= -->
-			<link rel="stylesheet" href="css/linearicons.css">
-			<link rel="stylesheet" href="css/font-awesome.min.css">
-			<link rel="stylesheet" href="css/bootstrap.css">
-			<link rel="stylesheet" href="css/magnific-popup.css">
-			<link rel="stylesheet" href="css/jquery-ui.css">
-			<link rel="stylesheet" href="css/nice-select.css">
-			<link rel="stylesheet" href="css/animate.min.css">
-			<link rel="stylesheet" href="css/owl.carousel.css">
-			<link rel="stylesheet" href="css/main.css">
-		</head>
-		<body>
-		  <header id="header">
-		    <div class="container main-menu">
-		    	<div class="row align-items-center justify-content-between d-flex">
-			      <div id="logo">
-			        <a href="index-cn.html" class="navbar-title">Jennifer Wu</a>
-			      </div>
-			      <nav id="nav-menu-container">
-			        <ul class="nav-menu">
-			          <li><a href="about-cn.html">关于</a></li>
-			          <li><a href="https://medium.com/@jenniwu94" target="_blank">文章</a></li>
-								<li><a href="index.html">English</a></li>
-			        </ul>
-			      </nav>
-		    	</div>
-		    </div>
-		  </header>
+	<link rel="stylesheet" href="css/linearicons.css">
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/magnific-popup.css">
+	<link rel="stylesheet" href="css/jquery-ui.css">
+	<link rel="stylesheet" href="css/nice-select.css">
+	<link rel="stylesheet" href="css/animate.min.css">
+	<link rel="stylesheet" href="css/owl.carousel.css">
+	<link rel="stylesheet" href="css/main.css">
+</head>
 
-			<!-- start banner Area -->
-			<section class="banner-area">
-				<div class="container">
-					<div class="row fullscreen align-items-center justify-content-between">
-						<div class="col-lg-6 col-md-6 banner-left">
-							<h1>
-								<span>你好，我是 Jennifer，</span>
-								<span>一名</span>
-								<span class="title-emphasis">多学科产品工程师</span>
-								<span>，热衷于创造为他人带来价值的项目。💪</span>
-							</h1>
-							<p>
-								我很注重通过精心设计的解决方案来推动有战略性的商业决定。
-								我具有多种角色的工作经验，包括全栈工程师，业务分析师和财务服务人员。
-								这些带给我具有从多种视角分析并设计产品的能力。
-							</p>
-							<a href="about-cn.html" class="primary-btn text-uppercase">了解更多</a>
-						</div>
-						<div class="col-lg-6 col-md-6 banner-right align-self-end">
-							<img class="img-fluid" src="img/image.png" alt="">
+<body>
+	<header id="header">
+		<div class="container main-menu">
+			<div class="row align-items-center justify-content-between d-flex">
+				<div id="logo">
+					<a href="index-cn.html" class="navbar-title">Jennifer Wu</a>
+				</div>
+				<nav id="nav-menu-container">
+					<ul class="nav-menu">
+						<li><a href="about-cn.html">关于</a></li>
+						<li><a href="https://medium.com/@jenniwu94" target="_blank">文章</a></li>
+						<li><a href="index.html">English</a></li>
+					</ul>
+				</nav>
+			</div>
+		</div>
+	</header>
+
+	<!-- start banner Area -->
+	<section class="banner-area">
+		<div class="container">
+			<div class="row fullscreen align-items-center justify-content-between">
+				<div class="col-lg-6 col-md-6 banner-left">
+					<h1>
+						<span>你好，我是 Jennifer，</span>
+						<span>一名</span>
+						<span class="title-emphasis">多学科产品工程师</span>
+						<span>，热衷于创造为他人带来价值的项目。💪</span>
+					</h1>
+					<p>
+						我很注重通过精心设计的解决方案来推动有战略性的商业决定。
+						我具有多种角色的工作经验，包括全栈工程师，系统安全工程师，业务分析师和财务服务人员。
+						这些带给我具有从多种视角分析并设计产品的能力。
+					</p>
+					<a href="about-cn.html" class="primary-btn text-uppercase">了解更多</a>
+				</div>
+				<div class="col-lg-6 col-md-6 banner-right align-self-end">
+					<img class="img-fluid" src="img/image.png" alt="">
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- End banner Area -->
+
+	<!-- Start services Area -->
+	<section class="services-area section-gap">
+		<div class="container">
+			<div class="row d-flex justify-content-center">
+				<div class="menu-content  col-lg-7">
+					<div class="title text-center">
+						<h2 class="mb-10">价值观</h2>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-4 col-md-6">
+					<div class="single-services">
+						<i class="lnr fa fa-handshake-o"></i>
+						<h4>信任</h4>
+						<p>
+							我相信坚固的人际关系是建立有效团队的前提，而信任是创立良好关系的前提。我通过对正确的事情做出承诺并及时履行我的承诺，从而获得信任。
+						</p>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6">
+					<div class="single-services">
+						<i class="lnr fa fa-rocket"></i>
+						<h4>创新</h4>
+						<p>
+							“如果止步不前，我们就是在后退。” 我力图改进现状，所以我不断地学习新的科技、探索更有效的工作方法。
+						</p>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6">
+					<div class="single-services">
+						<i class="lnr fa fa-search"></i>
+						<h4>求知</h4>
+						<p>
+							我时常在问自己，为什么某件事情是它现在的样子？我的求知欲给我热情，而热情让我不断地追求卓越。
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- End services Area -->
+
+	<!-- start footer Area -->
+	<footer class="footer-area section-gap">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-5 col-md-6 col-sm-6">
+					<div class="single-footer-widget">
+						<h4>Jennifer是谁？</h4>
+						<p>
+							商业策划师、软件工程师、多学科产品工程师。热爱通过创造有意义、战略性和鼓舞他人的方案来解决困难商业问题。对新科技充满好奇心，并且喜欢开发有积极社会影响的产品。
+						</p>
+						<p class="footer-text">
+							Copyright &copy;
+							<script>document.write(new Date().getFullYear());</script>, All rights reserved
+						</p>
+					</div>
+				</div>
+				<div class="col-lg-7 col-md-6 col-sm-6 social-widget">
+					<div class="single-footer-widget">
+						<h4>社交平台</h4>
+						<div class="footer-social d-flex align-items-center">
+							<a href="https://www.linkedin.com/in/jensywu/" target="_blank"><i
+									class="fa fa-linkedin-square"></i></a>
+							<a href="https://twitter.com/tweetjenniwu" target="_blank"><i class="fa fa-twitter"></i></a>
+							<a href="https://github.com/jenniwu" target="_blank"><i class="fa fa-github"></i></a>
+							<a href="https://medium.com/@jenniwu94" target="_blank"><i class="fa fa-medium"></i></a>
 						</div>
 					</div>
 				</div>
-			</section>
-			<!-- End banner Area -->
+			</div>
+		</div>
+	</footer>
+	<!-- End footer Area -->
 
-			<!-- Start services Area -->
-			<section class="services-area section-gap">
-				<div class="container">
-		            <div class="row d-flex justify-content-center">
-		                <div class="menu-content  col-lg-7">
-		                    <div class="title text-center">
-		                        <h2 class="mb-10">价值观</h2>
-		                    </div>
-		                </div>
-		            </div>
-					<div class="row">
-						<div class="col-lg-4 col-md-6">
-							<div class="single-services">
-								<i class="lnr fa fa-handshake-o"></i>
-								<h4>信任</h4>
-								<p>
-									我相信坚固的人际关系是建立有效团队的前提，而信任是创立良好关系的前提。我通过对正确的事情做出承诺并及时履行我的承诺，从而获得信任。
-								</p>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="single-services">
-								<i class="lnr fa fa-rocket"></i>
-								<h4>创新</h4>
-								<p>
-									“如果止步不前，我们就是在后退。” 我力图改进现状，所以我不断地学习新的科技、探索更有效的工作方法。
-								</p>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="single-services">
-								<i class="lnr fa fa-search"></i>
-								<h4>求知</h4>
-								<p>
-									我时常在问自己，为什么某件事情是它现在的样子？我的求知欲给我热情，而热情让我不断地追求卓越。
-								</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- End services Area -->
+	<script src="js/vendor/jquery-2.2.4.min.js"></script>
+	<script src="js/popper.min.js"></script>
+	<script src="js/vendor/bootstrap.min.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
+	<script src="js/easing.min.js"></script>
+	<script src="js/hoverIntent.js"></script>
+	<script src="js/superfish.min.js"></script>
+	<script src="js/jquery.ajaxchimp.min.js"></script>
+	<script src="js/jquery.magnific-popup.min.js"></script>
+	<script src="js/jquery.tabs.min.js"></script>
+	<script src="js/jquery.nice-select.min.js"></script>
+	<script src="js/isotope.pkgd.min.js"></script>
+	<script src="js/waypoints.min.js"></script>
+	<script src="js/jquery.counterup.min.js"></script>
+	<script src="js/simple-skillbar.js"></script>
+	<script src="js/owl.carousel.min.js"></script>
+	<script src="js/mail-script.js"></script>
+	<script src="js/main.js"></script>
+</body>
 
-			<!-- Start portfolio-area Area -->
-            <!-- <section class="portfolio-area section-gap" id="portfolio">
-                <div class="container">
-		            <div class="row d-flex justify-content-center">
-		                <div class="menu-content pb-70 col-lg-8">
-		                    <div class="title text-center">
-		                        <h1 class="mb-10">Our Latest Featured Projects</h1>
-		                        <p>Who are in extremely love with eco friendly system.</p>
-		                    </div>
-		                </div>
-		            </div>
-
-                    <div class="filters">
-                        <ul>
-                            <li class="active" data-filter="*">All</li>
-                            <li data-filter=".vector">Vector</li>
-                            <li data-filter=".raster">Raster</li>
-                            <li data-filter=".ui">UI/UX</li>
-                            <li data-filter=".printing">Printing</li>
-                        </ul>
-                    </div>
-
-                    <div class="filters-content">
-                        <div class="row grid">
-                            <div class="single-portfolio col-sm-4 all vector">
-                            	<div class="relative">
-	                            	<div class="thumb">
-	                            		<div class="overlay overlay-bg"></div>
-	                            		 <img class="image img-fluid" src="img/p1.jpg" alt="">
-	                            	</div>
-									<a href="img/p1.jpg" class="img-pop-up">
-									  <div class="middle">
-									    <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
-									  </div>
-								</a>
-                            	</div>
-								<div class="p-inner">
-								    <h4>2D Vinyl Design</h4>
-									<div class="cat">vector</div>
-								</div>
-                            </div>
-                            <div class="single-portfolio col-sm-4 all raster">
-                            	<div class="relative">
-	                            	<div class="thumb">
-	                            		<div class="overlay overlay-bg"></div>
-	                            		 <img class="image img-fluid" src="img/p2.jpg" alt="">
-	                            	</div>
-									<a href="img/p2.jpg" class="img-pop-up">
-									  <div class="middle">
-									    <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
-									  </div>
-								</a>
-                            	</div>
-								<div class="p-inner">
-								    <h4>2D Vinyl Design</h4>
-									<div class="cat">vector</div>
-								</div>
-                            </div>
-                            <div class="single-portfolio col-sm-4 all ui">
-                            	<div class="relative">
-	                            	<div class="thumb">
-	                            		<div class="overlay overlay-bg"></div>
-	                            		 <img class="image img-fluid" src="img/p3.jpg" alt="">
-	                            	</div>
-									<a href="img/p3.jpg" class="img-pop-up">
-									  <div class="middle">
-									    <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
-									  </div>
-									</a>
-
-	                           	</div>
-                                <div class="p-inner">
-                                    <h4>Creative Poster Design</h4>
-                                    <div class="cat">Agency</div>
-                                </div>
-                            </div>
-                            <div class="single-portfolio col-sm-4 all printing">
-                            	<div class="relative">
-	                            	<div class="thumb">
-	                            		<div class="overlay overlay-bg"></div>
-	                            		 <img class="image img-fluid" src="img/p4.jpg" alt="">
-	                            	</div>
-									<a href="img/p4.jpg" class="img-pop-up">
-									  <div class="middle">
-									    <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
-									  </div>
-									</a>
-                            	</div>
-                                <div class="p-inner">
-                                    <h4>Embosed Logo Design</h4>
-                                    <div class="cat">Portal</div>
-                                </div>
-                            </div>
-                            <div class="single-portfolio col-sm-4 all vector">
-                            	<div class="relative">
-                            	<div class="thumb">
-	                            		<div class="overlay overlay-bg"></div>
-	                            		 <img class="image img-fluid" src="img/p5.jpg" alt="">
-	                            	</div>
-									<a href="img/p5.jpg" class="img-pop-up">
-									  <div class="middle">
-									    <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
-									  </div>
-									</a>
-                            	</div>
-                                <div class="p-inner">
-                                    <h4>3D Helmet Design</h4>
-                                    <div class="cat">vector</div>
-                                </div>
-                            </div>
-                            <div class="single-portfolio col-sm-4 all raster">
-                            	<div class="relative">
-	                            	<div class="thumb">
-	                            		<div class="overlay overlay-bg"></div>
-	                            		 <img class="image img-fluid" src="img/p6.jpg" alt="">
-	                            	</div>
-									<a href="img/p6.jpg" class="img-pop-up">
-									  <div class="middle">
-									    <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
-									  </div>
-									</a>
-                            	</div>
-                                <div class="p-inner">
-                                    <h4>2D Vinyl Design</h4>
-                                    <div class="cat">raster</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </section> -->
-            <!-- End portfolio-area Area -->
-
-            <!-- start footer Area -->
-            <footer class="footer-area section-gap">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-5 col-md-6 col-sm-6">
-                            <div class="single-footer-widget">
-                                <h4>Jennifer是谁？</h4>
-                                <p>
-																	商业策划师、软件工程师、多学科产品工程师。热爱通过创造有意义、战略性和鼓舞他人的方案来解决困难商业问题。对新科技充满好奇心，并且喜欢开发有积极社会影响的产品。
-                                </p>
-                                <p class="footer-text">
-																	Copyright &copy;<script>document.write(new Date().getFullYear());</script>, All rights reserved
-																</p>
-                            </div>
-                        </div>
-                        <div class="col-lg-7 col-md-6 col-sm-6 social-widget">
-                            <div class="single-footer-widget">
-                                <h4>社交平台</h4>
-                                <div class="footer-social d-flex align-items-center">
-                                    <a href="https://www.linkedin.com/in/jensywu/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
-                                    <a href="https://twitter.com/tweetjenniwu" target="_blank"><i class="fa fa-twitter"></i></a>
-                                    <a href="https://github.com/jenniwu" target="_blank"><i class="fa fa-github"></i></a>
-                                    <a href="https://medium.com/@jenniwu94" target="_blank"><i class="fa fa-medium"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </footer>
-            <!-- End footer Area -->
-
-			<script src="js/vendor/jquery-2.2.4.min.js"></script>
-			<script src="js/popper.min.js"></script>
-			<script src="js/vendor/bootstrap.min.js"></script>
-			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
-  			<script src="js/easing.min.js"></script>
-			<script src="js/hoverIntent.js"></script>
-			<script src="js/superfish.min.js"></script>
-			<script src="js/jquery.ajaxchimp.min.js"></script>
-			<script src="js/jquery.magnific-popup.min.js"></script>
-    		<script src="js/jquery.tabs.min.js"></script>
-			<script src="js/jquery.nice-select.min.js"></script>
-            <script src="js/isotope.pkgd.min.js"></script>
-			<script src="js/waypoints.min.js"></script>
-			<script src="js/jquery.counterup.min.js"></script>
-			<script src="js/simple-skillbar.js"></script>
-			<script src="js/owl.carousel.min.js"></script>
-			<script src="js/mail-script.js"></script>
-			<script src="js/main.js"></script>
-		</body>
-	</html>
+</html>
